--- a/index.html
+++ b/index.html
@@ -9,86 +9,50 @@
     --base-font:12px;
     --brand:#2882bb; --brand2:#2a8fcf;
     --bg:#f7f8fc; --ink:#0f172a; --muted:#667085; --line:#E7EAF3;
-    --lime:#22c55e; --lime2:#a3e635; --danger:#ef4444;
-    --tag:#F2E7FF; --tag-ink:#6D28D9; --tag-shadow:0 4px 10px rgba(40,130,187,.18);
-    --card-shadow:0 18px 36px rgba(99,102,241,.12), 0 8px 24px rgba(40,130,187,.10);
+    --lime:#22c55e; --lime2:#a3e635;
+    --tag:#F2E7FF; --tag-ink:#6D28D9; --card-shadow:0 18px 36px rgba(99,102,241,.12), 0 8px 24px rgba(40,130,187,.10);
   }
-  *{box-sizing:border-box}
-  body{
-    margin:0; font:var(--base-font)/1.6 ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,Arial; color:var(--ink);
-    background:radial-gradient(1200px 520px at -10% -10%, #eaf4ff 0, #ffffff 60%, #f7faff 100%);
-  }
+  *{box-sizing:border-box} body{margin:0;font:var(--base-font)/1.6 ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,Arial;color:var(--ink);background:radial-gradient(1200px 520px at -10% -10%, #eaf4ff 0, #ffffff 60%, #f7faff 100%)}
   .wrap{max-width:1290px;margin:0 auto;padding:16px}
-
   .hero{position:relative;min-height:78px;border-radius:18px;padding:12px 16px;display:flex;align-items:center;justify-content:center;color:#fff;background:linear-gradient(135deg,var(--brand),var(--brand2));box-shadow:0 24px 56px rgba(40,130,187,.22)}
-  .hero .logo{width:120px;height:auto;object-fit:contain;filter:drop-shadow(0 2px 6px #0002)}
-  .left-img{position:absolute;left:14px;top:50%;transform:translateY(-50%);height:38px;object-fit:contain;filter:drop-shadow(0 2px 4px #0002)}
-  .right-img{position:absolute;right:14px;top:50%;transform:translateY(-50%)}
-  .tools{position:absolute;right:148px;top:50%;transform:translateY(-50%);display:flex;gap:10px;align-items:center}
-  .iconbtn{width:36px;height:36px;border-radius:12px;border:1px solid #ffffff40;display:grid;place-items:center;cursor:pointer;backdrop-filter:blur(4px);transition:.15s;box-shadow:0 6px 14px rgba(0,0,0,.15)}
-  .iconbtn:hover{transform:translateY(-1px)}
-  .icon-note{background:#ffd95e} .icon-calc{background:#60a5fa}
-
+  .left-img{position:absolute;left:14px;top:50%;transform:translateY(-50%);height:38px}
+  .right-img{position:absolute;right:14px;top:50%;;height:38px}
   .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px;margin-top:14px}
-  @media (max-width:980px){ .grid{grid-template-columns:1fr} .right-img{display:none} .tools{right:14px} .left-img{left:10px;height:22px} }
-
+  @media (max-width:980px){ .grid{grid-template-columns:1fr} .right-img{display:none} .left-img{left:10px;height:22px} }
   .card{background:#fff;border:1px solid var(--line);border-radius:14px;padding:10px;box-shadow:var(--card-shadow)}
-  .tag{display:inline-flex;align-items:center;gap:8px;background:var(--tag);color:var(--tag-ink);border:1px solid #eadbff;border-radius:999px;padding:6px 12px;font-weight:800;font-size:12px;box-shadow:var(--tag-shadow)}
+  .tag{display:inline-flex;align-items:center;gap:8px;background:var(--tag);color:var(--tag-ink);border:1px solid #eadbff;border-radius:999px;padding:6px 12px;font-weight:800;font-size:12px}
   h2{margin:8px 0 10px;font-size:18px}
   .row{display:flex;gap:10px;align-items:center}
   .input{width:100%;border:1px solid var(--line);border-radius:10px;padding:10px 12px;background:#fbfcff}
-  .btn{appearance:none;border:0;border-radius:10px;padding:10px 14px;font-weight:800;cursor:pointer;user-select:none}
-  .btn:active{transform:translateY(1px)}
-  .btn[disabled]{opacity:.6;cursor:not-allowed}
-  .btn-search{color:#053;background:linear-gradient(135deg,var(--lime),var(--lime2));box-shadow:0 10px 22px rgba(34,197,94,.28)}
+  .btn{appearance:none;border:0;border-radius:10px;padding:10px 14px;font-weight:800;cursor:pointer}
+  .btn-search{color:#053;background:linear-gradient(135deg,var(--lime),var(--lime2))}
   .btn-plain{background:#f7f7fb;color:#111;border:1px solid var(--line)}
-  .btn-danger{background:var(--danger);color:#fff;box-shadow:0 10px 22px rgba(239,68,68,.24)}
-  .btn-reindex{padding:6px 10px;font-size:.78rem;position:relative;top:-3px}
   .hint{font-size:12px;color:var(--muted);margin-top:6px}
-  .out{white-space:pre-wrap;min-height:90px;border:1px dashed #c9d5ea;border-radius:12px;padding:10px;margin-top:10px;background:#f3f6ff;color:#0f172a;box-shadow:inset 0 1px 0 #ffffffcc}
-  .out-alert{min-height:60px;padding:12px;text-align:center}
-  #alertMsg{font-size:24px;font-weight:900;color:#991b1b;margin:0 0 6px}
-  #alertResp{margin:0}
+  .out{white-space:pre-wrap;min-height:90px;border:1px dashed #c9d5ea;border-radius:12px;padding:10px;margin-top:10px;background:#f3f6ff;color:#0f172a}
   .list{margin:8px 0 0;padding:0;list-style:none}
   .item{padding:10px 0;border-top:1px solid var(--line)}
   .file-head{display:flex;align-items:center;gap:10px;flex-wrap:wrap}
   .file-actions{display:flex;gap:8px;flex-wrap:wrap;margin-top:6px}
   .btn-sm{padding:6px 10px;font-size:12px}
-  .thumb{width:48px;height:48px;object-fit:cover;border-radius:8px;border:1px solid var(--line);box-shadow:0 6px 14px rgba(99,102,241,.16), 0 3px 8px rgba(40,130,187,.10)}
-
-  /* spinner usado nas buscas */
-  .spinner{width:16px;height:16px;border-radius:50%;border:3px solid #d0dbf0;border-top-color:#6ea8fe;animation:spin .9s linear infinite}
-  @keyframes spin{to{transform:rotate(360deg)}}
-
   footer{margin:18px 0 6px;text-align:center}
-  .copyright{font-size:12px;font-weight:700;color:#2882bb;padding:10px 12px;border-radius:10px;background:rgba(40,130,187,.06);display:inline-block}
-  .credit{margin-top:4px;font-size:6px;color:#cfd6e3;display:block}
 </style>
 </head>
 <body>
   <div class="wrap">
     <div class="hero">
-      <img class="left-img" src="icon2.png"
-           onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/icon2.png';" alt="Logo esquerdo">
-      <div class="tools">
-        <button id="toggleNote" type="button" class="iconbtn icon-note" title="Post-it">🗒️</button>
-        <button id="toggleCalc" type="button" class="iconbtn icon-calc" title="Calculadora">🧮</button>
-      </div>
-      <img class="logo right-img" src="HDS.png"
-           onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/HDS.png';" alt="HDS TEC">
+      <img class="left-img" src="icon2.png" onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/icon2.png';" alt="">
+      <img class="right-img" src="HDS.png" onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/HDS.png';" alt="">
     </div>
 
     <div class="grid">
-      <!-- ALERTA -->
       <section class="card">
         <div class="tag">ALERTA</div>
         <h2>Controle de alerta</h2>
         <div class="row"><button id="btnAlert" type="button" class="btn btn-search">Pesquisar</button></div>
-        <div class="hint" id="alertBusy" style="display:none"><div class="row"><div class="spinner"></div><div>Pesquisando alerta...</div></div></div>
-        <div id="alertBox" class="out out-alert" style="display:none"><div id="alertMsg">—</div><div id="alertResp" class="hint">—</div></div>
+        <div class="hint" id="alertBusy" style="display:none">Pesquisando alerta…</div>
+        <div id="alertBox" class="out" style="display:none"></div>
       </section>
 
-      <!-- SITES OFICIAIS -->
       <section class="card">
         <div class="tag">SITES OFICIAIS</div>
         <h2>CRION COMERCIAL (AFFIX, ALTER e CONECTA PLAN)</h2>
@@ -96,18 +60,10 @@
           <input id="qSites" class="input" placeholder='Digite sua pergunta ..... (ex.: "manual")'>
           <button id="btnSites" type="button" class="btn btn-search">Pesquisar</button>
         </div>
-        <div class="hint" id="sitesBusy" style="display:none"><div class="row"><div class="spinner"></div><div>Pesquisando...</div></div></div>
+        <div class="hint" id="sitesBusy" style="display:none">Pesquisando…</div>
         <div id="outSites" class="out">—</div>
       </section>
 
-      <!-- SLOT LIVRE -->
-      <section class="card" style="background:transparent;border:0;box-shadow:none">
-        <img class="rr-img" src="rr.png"
-             onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/rr.png';"
-             style="display:block;width:100%;height:auto;object-fit:contain;filter:drop-shadow(0 24px 56px rgba(99,102,241,.22))" alt="Mascote RIC">
-      </section>
-
-      <!-- CRION -->
       <section class="card">
         <div class="tag">PROCEDIMENTOS CRION</div>
         <h2>Procedimentos</h2>
@@ -116,7 +72,7 @@
           <input id="qCRION" class="input" placeholder="Ex.: Onboarding, Retenção, URA, Script de Cobrança, Affix">
           <button id="btnCRION" type="button" class="btn btn-search" style="min-width:112px">Pesquisar</button>
         </div>
-        <div class="hint" id="crionBusy" style="display:none"><div class="row"><div class="spinner"></div><div>Listando procedimentos...</div></div></div>
+        <div class="hint" id="crionBusy" style="display:none">Listando procedimentos…</div>
         <div class="out" id="crionBox">
           <div id="crionStatus" class="hint" style="margin-top:0">—</div>
           <ul id="crionList" class="list"></ul>
@@ -125,8 +81,7 @@
     </div>
 
     <footer>
-      <span class="copyright">© 2025 Copyright: HDSTEC. Todos os Direitos Reservados v3.0.0 -Operacao</span>
-      <span class="credit">desenvolvido por Alexandre Cavalcante</span>
+      <span style="font-size:12px;font-weight:700;color:#2882bb">© 2025 HDSTEC — v3.0.0 Operação</span>
     </footer>
   </div>
 
@@ -140,41 +95,47 @@ const show = (el, on=true)=>{ if(!el) return; el.style.display = on? "" : "none"
 const esc  = s => String(s||"").replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;");
 function humanSize(b){ if(!b||b<=0) return "—"; const u=["B","KB","MB","GB"]; let i=0; while(b>=1024&&i<u.length-1){ b/=1024; i++; } return b.toFixed(2)+" "+u[i]; }
 
-/* ======= GITHUB ======= */
+/* ======= GITHUB (repo + pages) ======= */
 const GH_OWNER = "HD-TECH-hash";
 const GH_REPO  = "Ricai-crion-operacao";
-const RAW_BASE = `https://raw.githubusercontent.com/${GH_OWNER}/${GH_REPO}/main`;
+const RAW_BASE   = `https://raw.githubusercontent.com/${GH_OWNER}/${GH_REPO}/main`;
+const PAGES_BASE = `https://${GH_OWNER}.github.io/${GH_REPO}`;
 
-/* Lista PDFs salvos no repo (prioridade para evitar download) */
+/* Constrói URL estável de visualização no GitHub Pages */
+function pagesPdfUrl(name){
+  // evita 'download' do raw; usa Pages que abre inline
+  return `${PAGES_BASE}/data/affix/raw/${encodeURIComponent(name)}`;
+}
+
+/* Lista PDFs presentes no repositório */
 async function listRepoPdfs(){
   const api = `https://api.github.com/repos/${GH_OWNER}/${GH_REPO}/contents/data/affix/raw?ref=main`;
-  const r = await fetch(api, {cache:'no-store'});
-  if(!r.ok) return [];
+  const r = await fetch(api, {cache:'no-store'}); if(!r.ok) return [];
   const arr = await r.json();
   return arr
     .filter(it => it.type==="file" && /\.pdf$/i.test(it.name))
     .map(it => ({
       name: it.name,
       size: it.size||0,
-      openUrl: it.download_url, // abre em nova aba e também no <embed>
+      openUrl: pagesPdfUrl(it.name),   // <— abre inline em nova aba
       origin: "repo"
     }));
 }
 
-/* Lê manifest.json — contém também os links externos que NÃO baixaram */
+/* Lê manifest.json e traz SOMENTE status=ok */
 async function listManifestPdfs(){
   try{
     const r = await fetch(`${RAW_BASE}/data/affix/manifest.json?ts=${Date.now()}`, {cache:'no-store'});
     if(!r.ok) return [];
     const j = await r.json();
     return (j.items||[])
-      .filter(x => x && x.url && /\.pdf$/i.test(x.url))
-      .map(x => ({
-        name: x.name || x.url.split('/').pop(),
-        size: x.size || 0,
-        openUrl: x.repo_raw || x.url, // se baixou, usa repo_raw; senão tenta abrir o link externo
-        origin: x.repo_raw ? "repo" : "external"
-      }));
+      .filter(x => x && x.url && /\.pdf$/i.test(x.url) && (x.status === "ok"))
+      .map(x => {
+        const name = x.name || x.url.split('/').pop();
+        // se baixou, preferir o Pages (inline). Se não, usar link externo.
+        const openUrl = x.repo_raw ? pagesPdfUrl(name) : x.url;
+        return { name, size: x.size||0, openUrl, origin: x.repo_raw ? "repo" : "external" };
+      });
   }catch(_){ return []; }
 }
 
@@ -186,13 +147,15 @@ document.addEventListener('DOMContentLoaded', () => {
     try{
       const r = await fetch(APP_URL+"?fn=getalert", {method:"POST",headers:{"Content-Type":"text/plain"},body:"{}"}).then(r=>r.json());
       const msg = (r && r.found) ? ("🚨 " + String(r.mensagem||"—").toUpperCase()) : "Sem recado no momento.";
-      $('#alertMsg').textContent = msg; $('#alertResp').textContent = r && r.responsavel ? String(r.responsavel||"").toLowerCase() : "";
+      $('#alertBox').innerHTML = `<div style="font-weight:900">${esc(msg)}</div><div class="hint">${esc(r?.responsavel||'')}</div>`;
       show($('#alertBox'),true);
-    }catch(e){ $('#alertMsg').textContent="Erro: "+e.message; show($('#alertBox'),true); }
-    finally{ show($('#alertBusy'),false); }
+    }catch(e){
+      $('#alertBox').textContent = "Erro: " + e.message;
+      show($('#alertBox'),true);
+    }finally{ show($('#alertBusy'),false); }
   });
 
-  // SITES OFICIAIS  (lista PDFs do repo + manifest; filtro por texto)
+  // SITES OFICIAIS
   $('#btnSites')?.addEventListener('click', doSites);
   $('#qSites')?.addEventListener('keydown', e=>{ if(e.key==='Enter') doSites(); });
 
@@ -203,7 +166,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
     try{
       const [repo, manifest] = await Promise.all([listRepoPdfs(), listManifestPdfs()]);
-      // de-dup por nome (prioriza repo)
+      // junta e de-duplica por nome (prioriza repo)
       const map = new Map();
       for (const it of [...manifest, ...repo]){ if(!map.has(it.name)) map.set(it.name, it); }
       let items = [...map.values()];
@@ -217,36 +180,41 @@ document.addEventListener('DOMContentLoaded', () => {
 
       for (const it of items){
         const wrap = document.createElement('div'); wrap.className='item';
+
         const head = document.createElement('div'); head.className='file-head';
         head.innerHTML = `<div><b>${esc(it.name)}</b>${it.origin==='external' ? ' <span class="hint">(link externo)</span>':''}</div>`;
         wrap.appendChild(head);
 
         const actions = document.createElement('div'); actions.className='file-actions';
 
-        // Abrir (SEM download): nova aba
+        // Abrir — nova aba SEM download (Pages ou externo)
         const btnOpen = document.createElement('button');
         btnOpen.className='btn btn-plain btn-sm'; btnOpen.textContent='Abrir';
-        btnOpen.addEventListener('click', ()=> window.open(it.openUrl, '_blank', 'noopener'));
+        btnOpen.addEventListener('click', ()=> window.open(it.openUrl, '_blank', 'noopener,noreferrer'));
         actions.appendChild(btnOpen);
 
-        // Prévia inline (navegador renderiza o PDF nativo)
+        // Prévia — inline com <embed>; fallback p/ Google Viewer no <object>
         const btnPrev = document.createElement('button');
-        btnPrev.className='btn btn-plain btn-sm'; btnPrev.textContent='Prévía'.replace('í','í'); // só pra manter acento ok
+        btnPrev.className='btn btn-plain btn-sm'; btnPrev.textContent='Prévia';
         btnPrev.addEventListener('click', ()=>{
           const id = 'prev_'+btoa(it.openUrl).replace(/=+/g,'');
           let prev = document.getElementById(id);
           if(prev){ prev.remove(); return; }
           prev = document.createElement('div'); prev.id = id; prev.style.marginTop='8px';
-          prev.innerHTML = `<embed src="${it.openUrl}#toolbar=1" type="application/pdf" style="width:100%;height:480px;border:1px solid var(--line);border-radius:10px">`;
+
+          const gview = `https://docs.google.com/gview?embedded=1&url=${encodeURIComponent(it.openUrl)}`;
+          prev.innerHTML = `
+            <object data="${it.openUrl}" type="application/pdf" style="width:100%;height:520px;border:1px solid var(--line);border-radius:10px">
+              <iframe src="${gview}" style="width:100%;height:520px;border:1px solid var(--line);border-radius:10px"></iframe>
+            </object>`;
           wrap.appendChild(prev);
         });
         actions.appendChild(btnPrev);
 
         const meta2 = document.createElement('div'); meta2.className='hint';
         meta2.textContent = `Tamanho: ${humanSize(it.size||0)}`;
+        wrap.appendChild(actions); wrap.appendChild(meta2);
 
-        wrap.appendChild(actions);
-        wrap.appendChild(meta2);
         frag.appendChild(wrap);
       }
 
@@ -274,12 +242,14 @@ document.addEventListener('DOMContentLoaded', () => {
         frag.appendChild(li);
       });
       $('#crionList').appendChild(frag);
+
       if(items.length){
-        let from=0; 
+        let from=0;
+        const sid = r.sessionId;
         while(from<items.length){
-          const x = await fetch(APP_URL+"?fn=fetchcrionsnippets", {method:"POST",headers:{"Content-Type":"text/plain"},body:JSON.stringify({sessionId:r.sessionId,from,limit:6})}).then(r=>r.json());
+          const x = await fetch(APP_URL+"?fn=fetchcrionsnippets", {method:"POST",headers:{"Content-Type":"text/plain"},body:JSON.stringify({sessionId:sid,from,limit:6})}).then(r=>r.json());
           (x.items||[]).forEach(row=>{
-            const el=document.querySelector('#snip_crion_'+row.index);
+            const el=$('#snip_crion_'+row.index);
             el.innerHTML=(row.snippets && row.snippets.length)
               ? row.snippets.map(s=>`<div style="color:#374151;font-size:13px;margin:6px 0">${esc(s)}</div>`).join("")
               : '<span class="hint">—</span>';
